# django_theme_css_loader

./: README.md  pyproject.toml
django_theme_css_loader/: apps.py  widgets.py
django_theme_css_loader/static/django_theme_css_loader/: loader.js  loader.min.js
