[tool.poetry]
name = "django-theme-css-loader"
version = "0.1.0"
description = "Load different CSS in Django admin site when switching between dark/light mode"
authors = ["rabbit-aaron <rabbit.aaron@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
